Changed background picture

--- a/index.html
+++ b/index.html
@@ -83,22 +83,18 @@
 
         <a class="header-menu-toggle" href="#0">
             <span class="header-menu-text">
-                <img src="images/duy1logo.png" alt="Homepage" usemap="#navigation">
+                <img src="images/duy1logo.png" alt="Homepage">
             </span>
             <!-- <span class="header-menu-text">Menu</span> -->
             <span class="header-menu-icon"></span>
         </a>
-
-        <map name="navigation">
-            <area shape="rect" coords="0,0,100,48" href="#0" alt="navigation" />
-        </map>
 
     </header> <!-- end s-header -->
 
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/IMG_8795.JPG" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/background/lauren-mancke-60627-unsplash.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -161,7 +157,7 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead subhead--dark">Hello There</h3>
+                <h3 class="subhead subhead--dark">A Little Something</h3>
                 <h1 class="display-1 display-1--light">About Me</h1>
             </div>
         </div> <!-- end section-header -->
@@ -181,7 +177,7 @@
                             I'm a web developer with a background in accounting, based in Santa Ana, CA.&nbsp;
                             As I was earning my degree, I was exposed to the tech world through courses in C# and C++.&nbsp;
                             This exposure helped me realize I was drawn to programming's creative problem-solving.&nbsp;
-                            I enjoy designing and building applications with simplistic design that enhances the user's satisfaction and experience.
+                            I enjoy designing and building applications with simplistic design that enhances the user's experience and satisfaction.
                         </p>
                     </div>
                 </div>
