Updated skills section

--- a/index.html
+++ b/index.html
@@ -369,15 +369,7 @@
                     <div class="skillIconContainer">
                         <img src="./images/tech_icons/jQuery.png" alt="jQuery">
                         <p>jQuery</p>
-                    </div>
-                    <div class="skillIconContainer">
-                        <img src="./images/tech_icons/materializecss.png" alt="materialize">
-                        <p>Materialize</p>
-                    </div>
-                    <div class="skillIconContainer">
-                        <img src="./images/tech_icons/bootstrap.png" alt="bootstrap">
-                        <p>Bootstrap</p>
-                    </div>                     
+                    </div>                 
                     <div class="skillIconContainer">
                         <img src="./images/tech_icons/es6.png" alt="es6">
                         <p>ECMAScript6</p>
@@ -391,6 +383,14 @@
                         <p>Redux</p>
                     </div>
                     <div class="skillIconContainer">
+                        <img src="./images/tech_icons/materializecss.png" alt="materialize">
+                        <p>Materialize</p>
+                    </div>
+                    <div class="skillIconContainer">
+                        <img src="./images/tech_icons/bootstrap.png" alt="bootstrap">
+                        <p>Bootstrap</p>
+                    </div>    
+                    <div class="skillIconContainer">
                         <img src="./images/tech_icons/git.png" alt="git">
                         <p>Git</p>
                     </div>
@@ -403,28 +403,28 @@
                         <p>Node.js</p>
                     </div>
                     <div class="skillIconContainer">
-                        <img src="./images/tech_icons/php.png" alt="php">
-                        <p>PHP</p>
-                    </div>
-                    <div class="skillIconContainer">
                         <img src="./images/tech_icons/mySql.png" alt="mySql">
                         <p>MySQL</p>
-                    </div>
-                    <div class="skillIconContainer">
-                        <img src="./images/tech_icons/c-sharp.jpg" alt="c-sharp">
-                        <p>C#</p>
                     </div>
                     <div class="skillIconContainer">
                         <img src="./images/tech_icons/ajax.png" alt="ajax">
                         <p>AJAX</p>
                     </div>  
                     <div class="skillIconContainer">
+                        <img src="./images/tech_icons/chrome.png" alt="chrome dev tools">
+                        <p>Chrome DevTools</p>
+                    </div>
+                    <div class="skillIconContainer">
                         <img src="./images/tech_icons/aws.png" alt="aws">
                         <p>AWS EC-2</p>
                     </div>
                     <div class="skillIconContainer">
-                        <img src="./images/tech_icons/mamp.png" alt="mamp">
-                        <p>Mamp</p>
+                        <img src="./images/tech_icons/c-sharp.jpg" alt="c-sharp">
+                        <p>C#</p>
+                    </div>
+                    <div class="skillIconContainer">
+                        <img src="./images/tech_icons/c-plus-plus.png" alt="c++">
+                        <p>C++</p>
                     </div>
                     <div class="skillIconContainer">
                         <img src="./images/tech_icons/meistertask.png" alt="meistertask">
