--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                     <div class="cinfo">
                         <h5>Email Me At</h5>
                         <p>
-                            duyng19@gmail.com
+                            duydoescode@gmail.com
                         </p>
                     </div>
 
