update project image for relluo

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     
                             <div class="item-folio__caption">
                                 <p>
-                                    Relluo allows you to easily add and track multiple goals and then check off whether you met or missed your goal each day. Besides that, you can also track your progress with the support of goal-buddies, who you get to select, to motivate you and keep you accountable to stay on track.
+                                    Relluo is a goal tracking app that allows you to easily add and track multiple goals and then check off whether you met or missed your goal each day. Besides that, you can also track your progress with the support of goal-buddies, who you get to select, to motivate you and keep you accountable to stay on track.
                                 </p>
                             </div>  
 
