change contact form placeholders color, decrease the timming of opening and closing nav bar, add jquery contact form plugin

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                     <div class="cinfo">
                         <h5>Email Me At</h5>
                         <p>
-                            duyng19@gmail.com
+                            <a href="mailto:duyng19@gmail.com">duyng19@gmail.com</a>
                         </p>
                     </div>
 
@@ -679,6 +679,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/contact-form-validation.js"></script>
 
 </body>
 
