--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <a href="https://github.com/dnguyen793" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://drive.google.com/file/d/1qtYF_cCw5mSlSGucOd_S-cmMyDTR4Pej/view?usp=sharing" target="_blank"><i class="fa fa-file-o" aria-hidden="true"></i></a>
+                        <a href="https://drive.google.com/open?id=1_XSOC04ktW6JyriHqeOFN5kufMwdGsYM" target="_blank"><i class="fa fa-file-o" aria-hidden="true"></i></a>
                     </li>
                 </ul>
 
@@ -142,7 +142,7 @@
                 <a href="https://github.com/dnguyen793" target="_blank"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1qtYF_cCw5mSlSGucOd_S-cmMyDTR4Pej/view?usp=sharing" target="_blank"><i class="fa fa-file-o" aria-hidden="true"></i><span>Resume</span></a>
+                <a href="https://drive.google.com/open?id=1_XSOC04ktW6JyriHqeOFN5kufMwdGsYM" target="_blank"><i class="fa fa-file-o" aria-hidden="true"></i><span>Resume</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -591,7 +591,7 @@
                             <a href="https://github.com/dnguyen793" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://drive.google.com/file/d/1qtYF_cCw5mSlSGucOd_S-cmMyDTR4Pej/view?usp=sharing" target="_blank"><i class="fa fa-file-o" aria-hidden="true"></i></a>
+                            <a href="https://drive.google.com/open?id=1_XSOC04ktW6JyriHqeOFN5kufMwdGsYM" target="_blank"><i class="fa fa-file-o" aria-hidden="true"></i></a>
                         </li>
                     </ul> <!-- end contact-social -->
 
